Issue #42: Add Solr indexing support for non-variant entities Various fixes to Manager classes.